--- a/style.css
+++ b/style.css
@@ -448,6 +448,7 @@ footer {
 .logo-footer p {
     width: 500px;
     font-size: 13px;
+    color: rgb(199, 198, 198);
 }
 
 .reseaux i {
@@ -474,6 +475,7 @@ footer {
 .container-addr p {
     margin-top: 20px;
     font-size: 13px;
+    color: rgb(199, 198, 198);
 }
 
 .actualite {
@@ -489,7 +491,7 @@ footer {
 }
 
 .container-actu a {
-   color: #fff;
+   color: rgb(199, 198, 198);
    margin-top: 20px;
    font-size: 13px;
 }
@@ -510,7 +512,7 @@ footer {
 
 .liens a {
     text-decoration: none;
-    color: #fff;
+    color: rgb(199, 198, 198);
     padding: 5px;
     font-family: Poppins, sans-serif;
     font-size: 13px;
@@ -524,6 +526,7 @@ footer {
 .copyright p {
     text-align: center;
     font-size: 13px;
+    color: rgb(199, 198, 198);
 }
 
 /*-- container-equipe --*/
@@ -763,7 +766,7 @@ form button {
     nav ul {
         max-height: 0;
         background: #fff;
-        height: 400px;
+        height: 500px;
     }
 
     .menu {
